# cubemars_servo_can

./: .gitignore  BUG_FIX_SUMMARY.md  CHANGELOG.md  pyproject.toml  readme.md
AK40-10-firmware-and-parameters/: AK40-10 KV170.AppParams  AK40-10 KV170.McParams  AK40-10 KV170.STEP  AK40-10 KV170_V2_20250624.hex  README.md
AKA60-6-firmware-and-parameters/: AKA60-6.STEP  AKA60-6_SE_V3_2_20250222.hex  AKA60-6_V3_2_20250222.AppParams  AKA60-6_V3_2_20250222.McParams  README.md
docs/: configuration.md  control_modes.md  getting_started.md  usage.md
src/cubemars_servo_can/: __init__.py  can_manager.py  config.py  constants.py  motor_state.py  servo_can.py  utils.py
tests/: conftest.py  test_can_manager.py  test_config.py  test_motor_state.py  test_servo_can.py  test_servo_connection_errors.py  test_servo_context_update.py  test_servo_init_modes.py  test_servo_misc.py  test_servo_units_limits.py  test_utils.py
