[project]
name = "cubemars-servo-can"
version = "0.1.0"
description = "A simplified, robust, and modern Python library for controlling CubeMars AK-series actuators (e.g., AK40-10) via CAN bus in Servo Mode."
readme = "readme.md"
authors = [
    { name = "sam0rr", email = "samor140@hotmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "python-can>=4.3.0",
]
[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
addopts = "--maxfail=1 --cov=cubemars_servo_can"
